examples/test/testpolicy1320.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1320
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key11: value37
      key12: value41
      key10: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value7
          key12: value5
          key15: value20
      podSelector:
        matchLabels:
          key1: value48
          key8: value41
